--- a/portfolio/src/Home.css
+++ b/portfolio/src/Home.css
@@ -1,22 +1,55 @@
-body {
-    flex: auto;
-    background-color: #264653;
-    color: #fff;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin: 0;
-    padding: 10px;
-  }
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #1A4F6D;
+}
+
+.image-container {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 50px;
+;
+}
+
+.image-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.description-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 50px;
   
-container {
-    padding: 10px;
-  }
-  
-  h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
-  }
-  
-  p {
-    font-size: 24px;
-  }
+}
+
+.description-container h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #FFF;
+  font-family:monospace;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.description-container p {
+  font-size: 16px;
+  color: #FFF;
+  font-family: monospace;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+body{
+  background-color: #1A4F6D
+}
