--- a/portfolio/src/Navbar.css
+++ b/portfolio/src/Navbar.css
@@ -1,11 +1,11 @@
 
 
 nav {
-    background-color: #000;
-    padding: 20px;
+
+    padding: 20px 1450px;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 100;
     width: 100%;
     z-index: 9999;
   }
@@ -31,6 +31,8 @@ nav li a {
     text-decoration: none;
     font-size: 18px;
     transition: all 0.3s ease;
+    font-family: monospace;
+    
   }
   
 
